feat: 헥사고날 아키텍처 기반 상품 도메인 리팩터링 및 영속성 독립성 강화
상품, 브랜드, 카테고리 도메인을 헥사고날 아키텍처 원칙에 따라 리팩터링하여 영속성 기술에 독립적인 구조로 개선했습니다.

주요 변경사항:
- Brand, Category 도메인 엔티티 신규 추가 (product-core)
- JPA Entity에서 @CreatedDate, @LastModifiedDate 어노테이션 제거
- 도메인에서 ID 생성(Snowflake)과 시간 관리 직접 처리
- CategoryRepositoryImpl을 CategoryRepositoryAdapter로 변경
- Repository 인터페이스에 existsById 메서드 추가
- JPA Entity validation 제약 조건 개선
- 상품 삭제 기능 및 이벤트 처리 구현
- S3 URL 헬퍼 및 테스트 환경 설정 추가